<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>topic_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="glenn@todo.todo">glenn</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/TechmanRobotInc/tmr_ros2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <depend>rclcpp</depend>
  <depend>std_msgs</depend> -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tm_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tm_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
